ezGroceries/lab-05-pod-metadata-ns.yml
apiVersion: v1
kind: Pod
metadata:
  name: nginx
  namespace: lab-05
spec:
  containers:
    - name: nginx
      image: nginx
