ezGroceries/lab-07-service.yml
kind: Service
apiVersion: v1
metadata:
  name: container-info
spec:
  selector:
    app: container-info
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: NodePort
