ezGroceries/shopping-list-template.yml
kind: Deployment
metadata:
  name: shopping-list-deployment
  annotations:
    version: 0.0.1-SNAPSHOT
spec:
  replicas: 1
  template:
    metadata:
      labels:
        name: shopping-list
        component: shopping-list
    spec:
      containers:
        - name: shopping-list
          image: shopping-list:0.0.1-SNAPSHOT
            ports:
            - containerPort: 8080
            - containerPort: 8443
          lifecycle:
            preStop:
              exec:
                # SIGTERM triggers a quick exit; gracefully terminate instead
                command: ["kill", "-SIGINT", "`pidof java`"]
          readinessProbe:
            HttpGet:
              path: /actuator/health/readiness
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 5
          livenessProbe:
            HttpGet:
              path: /actuator/health/liveness
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 5
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "256Mi"
              cpu: "500m"
---
kind: Service
apiVersion: v1
metadata:
  name: shopping-list-service
spec:
    selector:
      app: shopping-list
    ports:
      - name: port80
        protocol: TCP
        port: 80
        targetPort: 8080
      - name: port443
          protocol: TCP
          port: 443
          targetPort: 8443
    type: LoadBalancer
---
apiVersion: v1
kind: Route
metadata:
  name: shopping-list-route
spec:
  to:
    kind: Service
    name: shopping-list-service
  tls:
    termination: passthrough
